--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Roberto Luna
+description: IS&T Scienctist | UX Designer | Social Maven | Lifelong Learner | Forever a Temple University Owl
 logo: /others/IMG_4025_Facetune_07-05-2021-13-08-23.jpg
 show_downloads: True
 theme: jekyll-theme-minimal
